tests/fixtures/validation/e3001_undefined_simple.sysml
// E3001: Undefined type reference
package ValidationTest {
    part x : NoSuchType;
}
