tests/fixtures/errors/missing_semicolon.sysml
package Test {
    part x : A
}
